glib2.0 (2.23.4-2) UNRELEASED; urgency=low

  * debian/patches/05-dont-fail-a-couple-of-tests-when-running-as-root.patch:
    - Updated.
  * 06-test-for-unexisting-files-in-TMP-and-not-in-HOME.patch:
    - Added, don't look for an unexisting file in $HOME since it will
      fail with an unexpected result if it's not writable (which happens
      on some buildds). Look at $TMP instead.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Mon, 22 Feb 2010 17:50:16 +0100

glib2.0 (2.23.4-1) experimental; urgency=low

  [ Emilio Pozuelo Monfort ]
  * debian/patches/05-dont-fail-a-couple-of-tests-when-running-as-root.patch:
    - Added, expect a couple of tests that play with file permissions
      to succeed when running as root.
  * debian/control.in:
    - Add desktop-file-utils to build depends to fix another test.
    - Standards-Version is 3.8.4, no changes needed.
    - Let libgio-fam depend on ${misc:Depends}.

  [ Sebastian Dröge ]
  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.

 -- Sebastian Dröge <slomo@debian.org>  Mon, 22 Feb 2010 09:04:48 +0100

glib2.0 (2.23.3-1) experimental; urgency=low

  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 09 Feb 2010 16:48:07 +0100

glib2.0 (2.23.2-2) experimental; urgency=low

  * debian/control.in,
    debian/libglib2.0-0.triggers,
    debian/libglib2.0-0.install,
    debian/libglib2.0-dev.install:
    + Ship gio-querymodules in the shared library package
      and triggers calls to every time /usr/lib/gio/modules
      is touched by a package.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 26 Jan 2010 09:40:47 +0100

glib2.0 (2.23.2-1) experimental; urgency=low

  * New upstream development release:
    + debian/rules,
      debian/libglib2.0-0.symbols:
      - Updated for the new API.
