@@ -62,11 +62,8 @@ FLAVORS := deb udeb refdbg
 # list of flavors to run the test suite on
 CHECK_FLAVORS := $(filter deb, $(FLAVORS))
 
-# list of arches on which testsuite failures are fatal
-# XXX testsuite failures currently disabled as testsuite fails everywhere when
-# $HOME isn't writable
-CHECK_SUPPORTED_ARCHES :=
-# CHECK_SUPPORTED_ARCHES := alpha amd64 i386 ia64 lpia m68k s390
+CHECK_SUPPORTED_ARCHES := amd64 i386 s390
+# CHECK_SUPPORTED_ARCHES := alpha ia64 lpia m68k
 # testsuite is known to fail on hppa, hurd, kfreebsd-amd64, kfreebsd-i386; see
 # Debian #428674
 # testsuite is known to fail on arm, mips, mipsel, powerpc, sparc; see GNOME #481573
